revert to mkdocs material theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,15 +1,23 @@
 site_name: "Kayode Oluwasegun"
+
 theme:
-  name: shadcn
-  show_title: true # show the title in the top bar
-  show_stargazers: true # show the stargazers in the top bar
-  pygments_style: # default styles
-    light: shadcn-light
-    dark: github-dark
-  icon: heroicons:rocket-launch # use the shadcn svg if not defined
-  topbar_sections: true # NEW!
-  katex_options: # optional
-    macros: # example of macros
-      "\\RR": "\\mathbb{R}"
-      "\\dx": "\\mathrm{d}x"
-  show_datetime: false
+  name: material
+  features:
+    - navigation.sections
+    - navigation.expand
+    - navigation.sidebar
+  palette:
+    - scheme: default
+      primary: slate
+      accent: teal
+    - scheme: slate
+      primary: slate
+      accent: teal
+
+nav:
+  - Home: index.md
+  - Reading:
+      - The Shelf: reading/the-shelf.md
+      - Books:
+          - Read:
+              - "21 The Go Programming Language": reading/books/read/the-go-programming-language.md
