--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,18 +1,11 @@
 site_name: "Kayode Oluwasegun"
 
 theme:
-  name: material
+  name: shadcn
   features:
     - navigation.sections
     - navigation.expand
     - navigation.sidebar
-  palette:
-    - scheme: default
-      primary: slate
-      accent: teal
-    - scheme: slate
-      primary: slate
-      accent: teal
 
 nav:
   - Home: index.md
