feat: google analytics

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,4 +20,8 @@ markdown_extensions:
   - admonition
 
 extra_javascript:
-  -
+  - js/gtag.js
+
+google_analytics:
+  - "G-WT1YB68QH0"
+  - "auto"
